2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b3)

	* Added support for resizing and moving the crop area.
	* When dropping pics at the end of the list, move to the last item.

2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b2)

	* Fixed bug adding images for first-time users.
	* GR now retries any requests once if the request failed
	  without a protocol error message. This will fix the
	  problems when albums have to be upgraded, and potentially
	  network errors.
	* Instead of stopping the upload on error, GR now lists
	  the errors so far and keeps going.
	* Transformed all \n to \u000A to fix the problems with
	  MessagePattern stripping linefeeds.

2004-07-29  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b1)

	* Fixed double-upload to old versions of Gallery.
	* Fixed not able to select root album in the new album dialog.
	* Stripping HTML tags in slideshow.
	* Hiding mouse pointer in slideshow.

2004-07-20  Pierre-Luc Paour <gallery@paour.com> (1.4)

	* Released.

2004-07-20  Pierre-Luc Paour <gallery@paour.com> (1.4-RC2-b2)

	* When connected to G2, no longer offers to create new album.
	* Removed all references to saving and/or loading state. No longer
	  building JSX into installers and patches.
	* Fixed uploading 2 of each picture to G2.

2004-07-12  Pierre-Luc Paour <gallery@paour.com> (1.4-RC2-b1)

	* Fixed hidden album bug in slideshow applet.
	* Fixed move album to command attempting to move when Cancel is clicked.
	* Fixed Java resize when thumbnails are present.

2004-07-10  Pierre-Luc Paour <gallery@paour.com> (1.4-RC1)

	* Fixed hidden image bug in slideshow applet.

2004-07-09  Pierre-Luc Paour <gallery@paour.com> (1.4-b17)

	* When the session expires, GR now attempts to login again.
	* Fixed duplicate extra field
	* Added a warning when EXIF data is about to be dumped by Java resize
	* Enabled silent install in the ZeroG installer.

2004-06-24  Pierre-Luc Paour <gallery@paour.com> (1.4-b16)
