@@ -1,3 +1,7 @@
+2004-08-06  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b4)
+
+	* AppletMini doesn't try to refresh album page when it's in G2 mode.
+
 2004-08-04  Pierre-Luc Paour <gallery@paour.com> (1.4.1-b3)
 
 	* Added support for resizing and moving the crop area.
